# SynServer

./: .gitignore  LICENSE  README.md  SCPI.pro  SynServer.pro  main.cpp  main.qml  scpisession.cpp  scpisession.h  server.h
SynServer/: CMakeLists.txt  Chart.qml  QRcode.qml  SynServer.pro  TraceChart.qml  chartcontrol.cpp  chartcontrol.h  conanfile.txt  ichannelinfo.h  isoltcalibrator.h  itraceinfo.h  main.cpp  main.qml  qml.qrc  qrcodegen.hpp  rpcclient.cpp  rpcclient.h  scpichannelinfo.cpp  scpichannelinfo.h  scpisocketsession.cpp  scpisocketsession.h  scpisoltcalibrator.cpp  scpisoltcalibrator.h  scpitraceinfo.cpp  scpitraceinfo.h  server.cpp  server.h  tempsoltcalibrator.cpp  tempsoltcalibrator.h  vnarpc.grpc.pb.cc  vnarpc.grpc.pb.h  vnarpc.pb.cc  vnarpc.pb.h  vnarpc.proto
UI/: chartview.pro  main.qml
img-uploader/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
tcpserver/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  server.cpp  server.h  tcpserver.pro
